fix: secondary color contrast link block contacts

--- a/src/theme/ItaliaTheme/Blocks/_contacts.scss
+++ b/src/theme/ItaliaTheme/Blocks/_contacts.scss
@@ -41,7 +41,8 @@
       .description h3,
       .description h4,
       .description h5,
-      .description h6 {
+      .description h6,
+      .description a {
         color: $secondary-text;
       }
     }
